--- a/src/app/top-navigation/top-navigation.component.html
+++ b/src/app/top-navigation/top-navigation.component.html
@@ -1,5 +1,5 @@
 <app-spinner></app-spinner>
-<nav class="navbar navbar-expand-lg bg-info white-text">
+<!-- <nav class="navbar navbar-expand-lg bg-info white-text">
   <a class="navbar-brand white-text" >Cognizant - Rabobank</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,4 +32,81 @@
       </li>
     </div>
   </div>
+</nav> -->
+<link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
+<!-- Ionicons -->
+<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="/dist/css/adminlte.min.css">
+<!-- Google Font: Source Sans Pro -->
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+<!-- Main Sidebar Container -->
+<nav class="main-header navbar navbar-expand navbar-white navbar-light ml-auto">
+  <ul class="navbar-nav ml-auto">
+    <a class="nav-link white-text">{{user.fullName}}</a>
+    <a class="btn btn-outline-danger" href="#" role="button" (click)="logout()">
+      Logout
+    </a>
+</ul>
 </nav>
+
+<nav>
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+  <!-- Brand Logo -->
+  <a href="index3.html" class="brand-link">
+    <span class="brand-text font-weight-light">Cognizant - Rabobank</span>
+  </a>
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Sidebar user panel (optional) -->
+    <!-- <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="image">
+        <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+      </div> -->
+      <!-- <div class="info">
+        <a class="nav-link white-text">{{user.fullName}}</a>
+        <a class="btn btn-outline-danger" href="#" role="button" (click)="logout()">
+          Logout
+        </a>
+      </div> -->
+    <!-- </div> -->
+
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
+        <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+        <li class="nav-item has-treeview menu-open">
+          <a href="#" class="nav-link active">
+            <i class="nav-icon fas fa-tachometer-alt"></i>
+            <p>
+              Glass Room Booking <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Schedule Meeting Room</p>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+
+      </ul>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!-- /.sidebar -->
+</aside>
+</nav>
+<script src="/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- bs-custom-file-input -->
+<!-- <script src="../../plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>  -->
+<!-- AdminLTE App -->
+<script src="/dist/js/adminlte.min.js"></script>
