--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,56 +1,63 @@
-<app-spinner></app-spinner>
-<div class="container" style="margin-top:100px">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><strong>Sign in </strong></h3>
-
-            </div>
-            <div class="panel-body">
-                <form role="form" id="quickForm" (ngSubmit)="onSubmit(heroForm)" #heroForm [formGroup]="loginForm"
-                    autocomplete="off">
-
-                    <div class="alert alert-danger" *ngIf="showError">
-                        <a class="" data-dismiss="alert" href="#"></a>{{loginErrorMsg}}
-                    </div>
-
-                    <div class="alert alert-primary" *ngIf="showSuccess">
-                        <a class="" data-dismiss="alert" href="#"></a>{{regSuccessMsg}}
-                    </div>
-                    <div class="form-group">
-                        <input type="text" formControlName="Username" placeholder="Employee ID" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.Username.errors }" />
-                        <div *ngIf="submitted && f.Username.errors" class="invalid-feedback">
-                            <div *ngIf="f.Username.errors.required">Employee ID is required</div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="password" formControlName="Password" placeholder="Password" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
-                        <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
-                            <div *ngIf="f.Password.errors.required">Password is required</div>
-                        </div>
-                    </div>
-                    <div class="input-group">
-
-                    </div>
-
-                    <button type="submit" class="btn btn-info btn-space">Sign in</button>
-                    <button type="button" class="btn btn-info btn-space" (click)="this.heroForm.reset();">Reset</button>
-
-                    <hr style="margin-top:10px;margin-bottom:10px;">
-
-                    <div class="form-group">
-                        <div style="font-size:85%">
-                            Don't have an account!
-                            <a href="#" routerLink="/register" style="text-align: right;">
-                                Sign Up Here
-                            </a>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<div class="login-box">
+    <div class="login-logo">
+      <a href="../../index2.html"><b>Project Name</b></a>
     </div>
-</div>
+    <!-- /.login-logo -->
+    <div class="card">
+      <div class="card-body login-card-body">
+        <p class="login-box-msg">Sign in to start your session</p>
+        <div class="alert alert-danger" *ngIf="showError">
+            <a class="" data-dismiss="alert" href="#"></a>{{loginErrorMsg}}
+        </div>
+        <form role="form" id="quickForm" (ngSubmit)="onSubmit(heroForm)" #heroForm [formGroup]="loginForm"
+        autocomplete="off">
+          <div class="input-group mb-3 form-group">
+            <input type="text" formControlName="Username" placeholder="Employee ID" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.Username.errors }" />
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <span class="fas fa-id-card"></span>
+              </div>
+            </div>
+            <div *ngIf="submitted && f.Username.errors" class="invalid-feedback">
+                <div *ngIf="f.Username.errors.required">Employee ID is required</div>
+            </div>
+          </div>
+          <div class="input-group mb-3 form-group">
+            <input type="password" class="form-control" placeholder="Password" formControlName="Password" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" >
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <span class="fas fa-lock"></span>
+              </div>
+            </div>
+  
+            <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
+                <div *ngIf="f.Password.errors.required">Password is required</div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-8">
+              <div class="icheck-primary">
+                <input type="checkbox" id="remember">
+                <label for="remember">
+                  Remember Me
+                </label>
+              </div>
+            </div>
+            <!-- /.col -->
+            <div class="col-4">
+              <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            </div>
+            <!-- /.col -->
+          </div>
+        </form> 
+   
+        <p class="mb-0">
+          <a href="#" routerLink="/register" class="text-center">Do have an account ? Sign Up</a>
+        </p>
+      </div>
+      <!-- /.login-card-body -->
+    </div>
+  </div>
+  <!-- /.login-box -->
+  
