--- a/src/app/top-navigation/top-navigation.component.html
+++ b/src/app/top-navigation/top-navigation.component.html
@@ -44,24 +44,24 @@
 <!-- Main Sidebar Container -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light ml-auto">
   <ul class="navbar-nav ml-auto">
-    <a class="nav-link white-text">{{user.fullName}}</a>
+    <a class="nav-link white-text">Welcome : {{user.fullName}}</a>
     <a class="btn btn-outline-danger" href="#" role="button" (click)="logout()">
       Logout
     </a>
-</ul>
+  </ul>
 </nav>
 
 <nav>
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
-  <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
-    <span class="brand-text font-weight-light">Cognizant - Rabobank</span>
-  </a>
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+    <a class="brand-link">
+      <span class="brand-text font-weight-light">Cognizant - Rabobank</span>
+    </a>
 
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <!-- Sidebar user panel (optional) -->
-    <!-- <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user panel (optional) -->
+      <!-- <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
         <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
       </div> -->
@@ -71,37 +71,37 @@
           Logout
         </a>
       </div> -->
-    <!-- </div> -->
+      <!-- </div> -->
 
-    <!-- Sidebar Menu -->
-    <nav class="mt-2">
-      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
-        <!-- Add icons to the links using the .nav-icon class
+      <!-- Sidebar Menu -->
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
+          <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-        <li class="nav-item has-treeview menu-open">
-          <a href="#" class="nav-link active">
-            <i class="nav-icon fas fa-tachometer-alt"></i>
-            <p>
-              Glass Room Booking <i class="right fas fa-angle-left"></i>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a href="#" class="nav-link active">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Schedule Meeting Room</p>
-              </a>
-            </li>
+          <li class="nav-item has-treeview menu-open">
+            <a class="nav-link active">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                Glass Room Booking <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a class="nav-link active">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Booked Rooms</p>
+                </a>
+              </li>
 
-          </ul>
-        </li>
+            </ul>
+          </li>
 
-      </ul>
-    </nav>
-    <!-- /.sidebar-menu -->
-  </div>
-  <!-- /.sidebar -->
-</aside>
+        </ul>
+      </nav>
+      <!-- /.sidebar-menu -->
+    </div>
+    <!-- /.sidebar -->
+  </aside>
 </nav>
 <script src="/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
